fix(mixins): set height for horizontal scrollbar

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -27,6 +27,7 @@
 .scrollbar(@x: hidden, @y: overlay) {
   overflow: hidden;
   scrollbar-width: thin;
+  scrollbar-color: rgba(173, 178, 194, 0.6) rgba(255, 255, 255, 0);
 
   &:hover {
     overflow-x: @x;
@@ -37,26 +38,22 @@
     -webkit-appearance: none;
     background: transparent;
     width: 4px;
+    height: 4px;
   }
 
-  &::-webkit-scrollbar-track {
-    width: 4px;
-    opacity: 0;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    // @palette-black-3
-    background: rgba(173, 178, 194, 0.6);
-    border-radius: 10px;
+  &::-webkit-scrollbar-track,
+  &::-webkit-scrollbar-button,
+  &::-webkit-scrollbar-corner,
+  &::-webkit-scrollbar-track-piece {
     display: none;
   }
 
-  &::-webkit-scrollbar-thumb:hover {
-    // @palette-black-4
-    background: rgba(123, 129, 156, 0.6);
+  &::-webkit-scrollbar-thumb {
+    background: rgba(173, 178, 194, 0.6);
+    border-radius: 10px;
   }
 
-  &:hover::-webkit-scrollbar-thumb {
-    display: block;
+  &::-webkit-scrollbar-thumb:hover {
+    background: rgba(123, 129, 156, 0.6);
   }
 }
